--- a/leon.html
+++ b/leon.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2093/2093797.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="stylesL.css" />
@@ -25,7 +26,7 @@
         />
         <p class="logo fuenteLogo bold">LE&Oacute;N</p>
         <nav>
-          <a class="fuenteLogo bold" target="_blank" href="index.html">Men&uacute;</a>
+          <a class="fuenteLogo bold" href="index.html">Men&uacute;</a>
           <a class="fuenteLogo bold" href="#imagen">Imagen</a>
           <a class="fuenteLogo bold" href="#informacion">Informacion</a>
           <a class="fuenteLogo bold" href="#audio">Audio</a>
